--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gemini GameGen - AI-Powered HTML5 Game Creation | game.pesonapath.my.id</title>
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  
   <meta name="description" content="Instantly create HTML5 games with AI! Describe your game idea and Gemini GameGen, powered by Google's Gemini API, generates HTML, CSS, and JavaScript. Edit, play, and save your unique web games. Perfect for rapid prototyping and learning game development on game.pesonapath.my.id.">
   <meta name="keywords" content="AI game generator, HTML5 game creation, JavaScript game code, CSS game design, Gemini API, AI game development, generate games with AI, no-code game development, low-code game development, web games, game.pesonapath.my.id, create HTML games, AI coding assistant for games">
   <link rel="canonical" href="https://game.pesonapath.my.id/">
